Fixed spacing of panel four for expansion

--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -89,9 +89,12 @@
     display: flex;
     flex-direction: column;
     text-align: left;
-    margin-left: 75px;
-    margin-right: 75px;
+    padding-left: 75px;
+    padding-right: 75px;
     height: 500px;
+
+    margin: 0 auto;
+    max-width: 1350px;
 }
 
 .StatisticsContainer {
